# io-cpp

./: .gitignore  IOCpp.podspec
projects/android-studio/: settings.gradle
projects/android-studio/app/: build.gradle
projects/android-studio/app/src/androidTest/java/com/lufinkey/iocpp/: ExampleInstrumentedTest.java
projects/android-studio/app/src/main/: AndroidManifest.xml
projects/android-studio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
projects/android-studio/app/src/main/java/com/lufinkey/iocpp/: MainActivity.java
projects/android-studio/app/src/main/res/values/: strings.xml
projects/android-studio/app/src/test/java/com/lufinkey/iocpp/: ExampleUnitTest.java
projects/android-studio/gradle/wrapper/: gradle-wrapper.properties
projects/android-studio/libiocpp/: build.gradle
projects/android-studio/libiocpp/src/androidTest/java/com/lufinkey/libiocpp/: ExampleInstrumentedTest.java
projects/android-studio/libiocpp/src/main/: AndroidManifest.xml
projects/android-studio/libiocpp/src/main/cpp/: CMakeLists.txt  IOCpp_android.cpp
projects/android-studio/libiocpp/src/main/res/values/: strings.xml
projects/android-studio/libiocpp/src/test/java/com/lufinkey/libiocpp/: ExampleUnitTest.java
projects/xcode/IOCpp.xcodeproj/: project.pbxproj
projects/xcode/IOCpp.xcworkspace/: contents.xcworkspacedata
projects/xcode/IOCppTest/: main.m
projects/xcode/IOCppTest-macOS/: main.m
src/fgl/: io.hpp
src/fgl/io/: Common.hpp  Console.cpp  Console.hpp  Filesystem.cpp  Filesystem.hpp  IOCpp.java  JNIIOCpp.cpp  JNIIOCpp.hpp
src/fgl/jni/: IOCpp.java
src/test/: IOCppTests.cpp  IOCppTests.hpp  main.cpp
tools/: fetch_android_dependencies.sh
